tests/baselines/reference/parserErrorRecovery_IncompleteMemberVariable2(strict=true).errors.txt
parserErrorRecovery_IncompleteMemberVariable2.ts(12,20): error TS2304: Cannot find name 'C'.
parserErrorRecovery_IncompleteMemberVariable2.ts(12,22): error TS1442: Expected '=' for property initializer.
parserErrorRecovery_IncompleteMemberVariable2.ts(12,22): error TS7008: Member '"hello"' implicitly has an 'any' type.


==== parserErrorRecovery_IncompleteMemberVariable2.ts (3 errors) ====
    // Interface
    interface IPoint {
        getDist(): number;
    }
    
    // Module
    module Shapes {
    
        // Class
        export class Point implements IPoint {
    
            public con:C "hello";
                       ~
!!! error TS2304: Cannot find name 'C'.
                         ~~~~~~~
!!! error TS1442: Expected '=' for property initializer.
                         ~~~~~~~
!!! error TS7008: Member '"hello"' implicitly has an 'any' type.
            // Constructor
            constructor (public x: number, public y: number) { }
    
            // Instance member
            getDist() { return Math.sqrt(this.x * this.x + this.y * this.y); }
    
            // Static member
            static origin = new Point(0, 0);
        }
    
    }
    
    // Local variables
    var p: IPoint = new Shapes.Point(3, 4);
    var dist = p.getDist();
    